content/terraform-enterprise/1.2.x/docs/enterprise/dynamic-provider-credentials/index.mdx
---
page_title: Dynamic provider credentials in Terraform Enterprise
description: >-
  Dynamic provider credentials generate temporary credentials for Terraform
  Enterprise runs. Learn how dynamic credentials for Vault, AWS, Azure,
  Kubernetes, and GCP can improve your security.
source: terraform-docs-common
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-02T17:54:50Z
last_modified: 2026-02-02T17:55:25Z
# END AUTO GENERATED METADATA
---

# Dynamic provider credentials

~> **Important:** If you are self-hosting [HCP Terraform agents](/terraform/cloud-docs/agents), ensure your agents use [v1.7.0](/terraform/cloud-docs/agents/changelog#1-7-0-03-02-2023) or above. To use the latest dynamic credentials features, [upgrade your agents to the latest version](/terraform/cloud-docs/agents/changelog).

Using static credentials in your workspaces<!-- BEGIN: TFC:only name:stacks-tfe --> or Stacks<!-- END: TFC:only name:stacks-tfe --> to authenticate providers presents a security risk, even if you rotate your credentials regularly. Dynamic provider credentials improve your security posture by letting you provision new, temporary credentials for each run.

You can configure dynamic credentials for each HCP Terraform workspace<!-- BEGIN: TFC:only name:stacks-tfe --> or Stack<!-- END: TFC:only name:stacks-tfe -->. This workflow eliminates the need to manually manage and rotate credentials across your organization. It also lets you use the cloud platform’s authentication and authorization tools to scope permissions based on metadata, such as a run’s phase, its workspace, or its organization.

## How dynamic credentials work

You configure a trust relationship between your cloud platform and HCP Terraform. As part of that process, you can define rules that let HCP Terraform workspaces and runs access specific resources. Then, the following process occurs for each Terraform plan and apply:

1.  HCP Terraform generates a [workload identity token](/terraform/enterprise/dynamic-provider-credentials/workload-identity-tokens). The token is compliant with OpenID Connect protocol (OIDC) standards and includes information about the organization, workspace<!-- BEGIN: TFC:only name:stacks-tfe --> or Stack<!-- END: TFC:only name:stacks-tfe -->, and run stage.
2.  When a plan or apply begins, HCP Terraform sends the workload identity token to the cloud platform, along with any other information needed to authenticate.
3.  The cloud platform uses HCP Terraform’s public signing key to verify the workload identity token.
4.  If verification succeeds, the cloud platform returns a set of fresh temporary credentials for HCP Terraform to use.
5.  HCP Terraform sets up these credentials within the run environment for the Terraform provider to use.
6.  The Terraform plan or apply proceeds.
7.  When the plan or apply completes, the run environment is torn down and the temporary credentials are discarded.

## Configure Dynamic Credentials for workspaces

Using dynamic credentials in a workspace requires the following steps for each cloud platform:

1.  **Set up a Trust Relationship:** You must configure a relationship between HCP Terraform and the other cloud platform. The exact details of this process will be different depending on the cloud platform.
2.  **Configure Cloud Platform Access:** You must configure roles and policies for the cloud platform to define the workspace’s access to infrastructure resources.
3.  **Configure HCP Terraform**: You must add specific environment variables to that workspace to tell HCP Terraform how to authenticate to the other cloud platform during plans and applies. Each cloud platform has its own set of environment variables to configure dynamic credentials.

The process for each step is different for each cloud platform. Refer to the cloud platform configuration instructions for full details. You can configure dynamic credentials for the following platforms:

-   [Vault](/terraform/enterprise/dynamic-provider-credentials/vault-configuration)
-   [Amazon Web Services](/terraform/enterprise/dynamic-provider-credentials/aws-configuration)
-   [Google Cloud Platform](/terraform/enterprise/dynamic-provider-credentials/gcp-configuration)
-   [Azure](/terraform/enterprise/dynamic-provider-credentials/azure-configuration)
-   [Kubernetes](/terraform/enterprise/dynamic-provider-credentials/kubernetes-configuration)
-   [Tencent Cloud](/terraform/enterprise/dynamic-provider-credentials/tencentcloud-configuration)

You can also use Vault to generate credentials for AWS, GCP, or Azure by setting up [Vault-backed dynamic credentials](/terraform/enterprise/dynamic-provider-credentials/vault-backed), which take advantage of Vault's [secrets engines](/vault/docs/secrets) to generate temporary credentials.

<!-- BEGIN: TFC:only name:stacks-tfe -->

## Configure dynamic credentials for queries

To use dynamic credentials for queries, complete the steps for [configuring dynamic credentials for workspaces](#configure-dynamic-credentials-for-workspaces). 

When using dynamic credentials to run queries, you must configure the run-specific environment variables for the corresponding cloud platform. HCP Terraform doesn't support using phase-specific variables, such as variables for plan and apply operations, when providing dynamic credentials to run a query. 

The following variables are examples of run-specific environment variables you can use to configure dynamic provider credentials for queries:

-   [Amazon Web Services](/terraform/enterprise/dynamic-provider-credentials/aws-configuration#required-environment-variables): `TFC_AWS_RUN_ROLE_ARN`
-   [Azure](/terraform/enterprise/dynamic-provider-credentials/azure-configuration#required-environment-variables): `TFC_AZURE_RUN_CLIENT_ID`
-   [Google Cloud Platform](/terraform/enterprise/dynamic-provider-credentials/gcp-configuration#required-environment-variables): `TFC_GCP_RUN_SERVICE_ACCOUNT_EMAIL`
-   [HCP](/terraform/enterprise/dynamic-provider-credentials/hcp-configuration#required-environment-variables): `TFC_HCP_RUN_PROVIDER_RESOURCE_NAME`
-   [Kubernetes](/terraform/enterprise/dynamic-provider-credentials/kubernetes-configuration#required-environment-variables): `TFC_KUBERNETES_WORKLOAD_IDENTITY_AUDIENCE`
-   [Tencent Cloud](/terraform/enterprise/dynamic-provider-credentials/tencentcloud-configuration#required-environment-variables): `TFC_TENCENTCLOUD_RUN_ROLE_ARN`
-   [Vault](/terraform/enterprise/dynamic-provider-credentials/vault-configuration#required-environment-variables): `TFC_VAULT_RUN_ROLE`

Refer to the cloud platform configuration instructions for full details.

## Configure dynamic credentials for a Stack

If you are configuring a Stack, refer to [Authenticate a Stack](/terraform/language/stacks/deploy/authenticate) to learn the workflow of authenticating your Stack deployments with dynamic credentials.

<!-- END: TFC:only name:stacks-tfe -->

## Terraform Enterprise Specific Requirements

### External Access to Metadata Endpoints

In order to verify signed JWTs, cloud platforms must have network access to the following static OIDC metadata endpoints within TFE:

1.  `/.well-known/openid-configuration` - standard OIDC metadata.
2.  `/.well-known/jwks` - TFE’s public key(s) that cloud platforms use to verify the authenticity of tokens that claim to come from TFE.

### External Vault Policy

If you are using an external Vault instance, you must ensure that your Vault instance has the correct policies setup as detailed in the [External Vault Requirements for Terraform Enterprise](/terraform/enterprise/requirements/data-storage/vault) documentation.
